--- a/templates/modifier/modifierAtelier.html.twig
+++ b/templates/modifier/modifierAtelier.html.twig
@@ -2,6 +2,53 @@
 
 {% block title %}Hello ModifierController!{% endblock %}
 
+{% block navbar %}
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightblue;">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/accueil ">MDL</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/accueil">Home</a>
+                            </li>
+                            {%  if app.user  %} 
+                                {%  if is_granted('ROLE_ADMIN')%}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/ajout">Ajout</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="/modifier">Modifier</a>
+                                    </li>
+                                {% endif %}
+                                {%  if is_granted('ROLE_INSCRIT')%}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/inscriptioncongres">Inscription</a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+
+                            <ul class="navbar-log">
+                                <li class="log-item">
+                                    <a href="/logout" class="nav-link">Se deconnecter</a>
+                                </li>
+                            {% else %}
+                                <ul class="navbar-log">
+                                    <li class="log-item">
+                                        <a href="/logout" class="nav-link">Se connecter</a>
+                                    </li>
+                                    <li class="log-item">
+                                        <a href="/register" class="nav-link">S'inscrire</a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                    </div>
+                </div>
+            </nav>
+        {% endblock %}
+
 {% block body %}
     <style>
 
@@ -18,6 +65,7 @@
         <table class="table">
             <thead>
                 <tr>
+                    <th scope="col">ID</th>
                     <th scope="col">Date de début</th>
                     <th scope="col">Date de fin</th>
                     <th scope="col">Modifier la vacation</th>
@@ -26,7 +74,8 @@
             <tbody>
                 {% for vacation in atelier.vacations %}
                     <tr>
-                        <th>{{ vacation.dateheuredebut|date("d/m/Y") }}</th>
+                        <th>{{ loop.index }}</th>
+                        <td>{{ vacation.dateheuredebut|date("d/m/Y") }}</td>
                         <td>{{ vacation.dateheurefin|date("d/m/Y") }}</td>
                         <td><a href="/modifier/{{ atelier.id }}/{{ vacation.id }}">Modifier vacation</a></td>
                     </tr>
