--- a/templates/modifier/modifierVacation.html.twig
+++ b/templates/modifier/modifierVacation.html.twig
@@ -1,5 +1,51 @@
 {% extends 'base.html.twig' %}
 
+{% block navbar %}
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightblue;">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/accueil ">MDL</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/accueil">Home</a>
+                            </li>
+                            {%  if app.user  %} 
+                                {%  if is_granted('ROLE_ADMIN')%}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/ajout">Ajout</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="/modifier">Modifier</a>
+                                    </li>
+                                {% endif %}
+                                {%  if is_granted('ROLE_INSCRIT')%}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/inscriptioncongres">Inscription</a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+
+                            <ul class="navbar-log">
+                                <li class="log-item">
+                                    <a href="/logout" class="nav-link">Se deconnecter</a>
+                                </li>
+                            {% else %}
+                                <ul class="navbar-log">
+                                    <li class="log-item">
+                                        <a href="/logout" class="nav-link">Se connecter</a>
+                                    </li>
+                                    <li class="log-item">
+                                        <a href="/register" class="nav-link">S'inscrire</a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                    </div>
+                </div>
+            </nav>
+        {% endblock %}
 
 {% block body %}
 <div  class="form" id="vacation" style="display: block;">
@@ -7,7 +53,10 @@
     {{ form_start(formVacation) }}
     {{ form_row(formVacation.dateheuredebut) }}
     {{ form_row(formVacation.dateheurefin) }}
-    {{ form_row(form._token) }}
+    <div style="display: none;">
+        {{ form_row(formVacation.atelier) }}
+    </div>
+    {{ form_row(formVacation._token) }}
     <input type="hidden" name="form_type" value="vacation">
     <input type="submit" value="envoyer">
     {{ form_end(formVacation, {'render_rest': false}) }}
